--- a/src/templates/library.html
+++ b/src/templates/library.html
@@ -12,10 +12,15 @@
   .loaded {
     opacity: 1;
   }
+.text-gradient-title {
+    background: linear-gradient(to right, blue, red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 </style>
 
 <div class="container mx-auto py-16">
-    <h1 class="text-3xl font-semibold mb-8">Your Library</h1>
+    <span class="text-gradient-title text-3xl font-semibold mb-8">Your Library</span>
     <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         {% if books %}
         {% for book in books %}
