updated page titles

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 {% extends '/templates/base.html' %}
-
+{% block title %}BookSync{% endblock %}
 {% block content %}
 <style>.text-gradient-title {
     background: linear-gradient(to right, blue, red);
