--- a/src/templates/library.html
+++ b/src/templates/library.html
@@ -1,5 +1,5 @@
 {% extends '/templates/base.html' %}
-{% block title %}Library{% endblock %}
+{% block title %}BookSync - Library{% endblock %}
 {% block content %}
 
 <style>
