--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,5 +1,5 @@
 {% extends '/templates/base.html' %}
-
+{% block title %}BookSync - Login{% endblock %}
 {% block content %}
 <div class="relative isolate px-6 pt-14 lg:px-8 pt-20">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true"></div>
