--- a/src/templates/reader.html
+++ b/src/templates/reader.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ book_title }}</title>
+    <title>"BookSync - {{ book_title }}"</title>
     <base href="{{ base }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
