--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,10 +1,11 @@
 {% extends '/templates/base.html' %}
+{% block title %}BookSync - Register{% endblock %}
+{% block content %}
 <style>.text-gradient-title {
     background: linear-gradient(to right, blue, red);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }</style>
-{% block content %}
 <div class="relative isolate px-6 lg:px-8 pt-20">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true"></div>
     <div class="mx-auto max-w-2xl py-10 sm:py-48 lg:py-10">
