--- a/src/templates/library.html
+++ b/src/templates/library.html
@@ -20,7 +20,7 @@
 </style>
 
 <div class="container mx-auto py-16">
-    <span class="text-gradient-title text-3xl font-semibold mb-8">Your Library</span>
+    <span class="text-gradient-title text-3xl font-semibold mb-8" style="margin-left: 24px;">Your Library</span>
     <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         {% if books %}
         {% for book in books %}
