--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ book_title }}</title>
 
   <style>
@@ -17,6 +17,8 @@
       justify-content: center;
       align-items: center;
       z-index: 1000; 
+      width: 100%;
+      height: 100%;
     }
     .loader {
       width: 100px; 
@@ -59,7 +61,9 @@
       position: fixed;
       bottom: 0;
       left: 0;
-      width: 100%;
+      right: 0;
+      max-height:100%;
+      max-width: 100%;
       backdrop-filter: backdrop-blur-md;
       background-color: rgba(255, 255, 255, 0.9); 
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -182,13 +186,17 @@
         color: inherit;
       }
     }
+    #main_book {
+      overflow-x: hidden; 
+      max-width: 100%
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="loader"></div>
   </div>
-  <main><div id='book_content'></div></main>
+  <main id="main_book"><div id='book_content'></div>
   <div id="navTrigger"></div> 
   <div id="navButtons">
     <a href='{{ url_for("library") }}' id="libraryButtonContainer">
@@ -199,8 +207,8 @@
       <button id="decreaseTextButton">-</button>
       <button id="increaseTextButton">+</button>
     </div>
+  </main>
 
-  </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -276,6 +284,8 @@
           }      book.classList.remove('loading');
           restoreScrollPosition();
           loaderContainer.style.display = 'none';
+          fadeInNav()
+          resetInactivityTimeout()
       })
     
       .catch(error => {
@@ -298,7 +308,7 @@
           setTimeout(() => { nav.style.visibility = 'hidden'; navVisible = false; }, 1000);
         }
       }
-    
+      
       function fadeInNav() {
         if (!navVisible) {
           nav.style.visibility = 'visible';
@@ -306,33 +316,27 @@
           navVisible = true;
         }
       }
-    
+      
       var inactivityTimeout;
-    
+      
       function resetInactivityTimeout() {
         clearTimeout(inactivityTimeout);
         inactivityTimeout = setTimeout(fadeOutNav, fadeOutTime);
       }
-    
+      
       navTrigger.addEventListener('mouseenter', function() {
         fadeInNav();
         resetInactivityTimeout();
       });
-    
+      
+      nav.addEventListener('mouseover', function() {
+        resetInactivityTimeout();
+      });
+      
       nav.addEventListener('mouseleave', function() {
         fadeOutNav();
         resetInactivityTimeout();
       });
-    
-      navTrigger.addEventListener('touchstart', function(event) {
-        fadeInNav();
-        resetInactivityTimeout();
-        event.preventDefault();
-      });
-    
-      setTimeout(fadeInNav, 100);
-      resetInactivityTimeout();
-    
 
 
       function changeBookTextSize(delta) {
