changed position of navbar buttons

--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -95,10 +95,9 @@
     #zoomControls {
         display: flex;
         gap: 10px; 
-        padding-right: 25px;
         margin-left: auto;
       }
-      #increaseTextButton, #decreaseTextButton {
+      #increaseTextButton, #decreaseTextButton, #resetTextButton {
         padding: 5px 10px; 
         margin: 0;
         font-size: 16px; 
