--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -111,6 +111,8 @@
       width: 100%;
       height: 75px; 
       z-index: 49;
+      opacity: 1;
+      background-color: rgba(255, 255, 255, 0); 
     }
     #libraryButton {
       font-size: 14px;
@@ -337,6 +339,10 @@
         resetInactivityTimeout();
       });
 
+      navTrigger.addEventListener('touchstart', function() {
+        fadeInNav();
+        resetInactivityTimeout();
+      });
 
       function changeBookTextSize(delta) {
         var currentSize = parseInt(window.getComputedStyle(bookContent, null).getPropertyValue('font-size'));
