fixed bug where user could select buttons from nav when hidden

--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -314,7 +314,7 @@
         }
       }
 
-      
+
       function fadeInNav() {
         if (!navVisible) {
           nav.style.visibility = 'visible';
@@ -336,11 +336,12 @@
       });
       
       nav.addEventListener('mouseover', function() {
+        fadeInNav();
         resetInactivityTimeout();
       });
       
       nav.addEventListener('mouseleave', function() {
-        fadeOutNav();
+
         resetInactivityTimeout();
       });
 
