removed main element that contained book content

--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -203,7 +203,7 @@
   <div class="container">
     <div class="loader"></div>
   </div>
-  <main id="main_book"><div id='book_content'></div></main>
+<div id='book_content'></div>
   <div id="navTrigger"></div> 
   <div id="navButtons">
     <a href='{{ url_for("library") }}' id="libraryButtonContainer">
