--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -193,9 +193,14 @@
         color: inherit;
       }
     }
-    #main_book {
+    #book_content {
       overflow-x: hidden; 
-      max-width: 100%
+      max-width: 100%;
+      max-height: 100%;
+    }
+    body {
+      max-width: 100%;
+      max-height: 100%
     }
   </style>
 </head>
@@ -214,7 +219,7 @@
       <button id="decreaseTextButton">-</button>
       <button id="increaseTextButton">+</button>
     </div>
-
+  </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
