changed max viewport units to dvh & dvw for mobile devices

--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -198,10 +198,12 @@
     #book_content {
       max-width: 100dvw;
       max-height: 100dvh;
+      overflow-x: hidden;
     }
     body {
       max-width: 100dvw;
       max-height: 100dvh;
+      overflow-x: hidden;
     }
     #libraryButton {
       background: linear-gradient(to right, blue, red);
