--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -9,7 +9,6 @@
     html{
       max-width: 100dvw;
       max-height: 100dvh;
-      overflow-x: hidden;
     }
     .container {
       display: none; 
@@ -22,8 +21,8 @@
       justify-content: center;
       align-items: center;
       z-index: 25; 
-      width: 100%;
-      height: 100%;
+      max-width: 100dvw;
+      height: 100dvh;
     }
     .loader {
       width: 100px; 
@@ -67,8 +66,8 @@
       bottom: 0;
       left: 0;
       right: 0;
-      max-height:100dvh;
       max-width: 100dvw;
+      max-height: 100dvh;
       backdrop-filter: backdrop-blur-md;
       background-color: rgba(255, 255, 255, 0.9); 
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -87,8 +86,8 @@
       right: 0;
       height:60px;
       z-index: 49;
-      max-height:100dvh;
       max-width: 100dvw;
+      max-height: 100dvh;
     }
     #libraryButtonContainer {
       position: absolute;
@@ -155,7 +154,7 @@
     img {
         opacity: 0;
     transition: opacity 0.5s ease-in-out;
-      max-width: 100%;
+      max-width: 100dvw;
       height: auto; 
     }
 
@@ -194,16 +193,14 @@
         color: #666;
       }
     }
-    
     #book_content {
-      max-width: 100dvw;
       max-height: 100dvh;
-      overflow-x: hidden;
+      max-width: 100dvw;
+      overflow-x:clip;
     }
     body {
-      max-width: 100dvw;
       max-height: 100dvh;
-      overflow-x: hidden;
+      max-width: 100dvw;
     }
     #libraryButton {
       background: linear-gradient(to right, blue, red);
