--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,11 +1,16 @@
 {% extends '/templates/base.html' %}
 {% block title %}BookSync - Login{% endblock %}
 {% block content %}
+<style>.text-gradient-title {
+    background: linear-gradient(to right, blue, red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }</style>
 <div class="relative isolate px-6 pt-14 lg:px-8 pt-20">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true"></div>
     <div class="mx-auto max-w-2xl py-10 sm:py-48 lg:py-10">
         <div class="text-center">
-            <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Welcome Back!</h1>
+            <h1 class="text-4xl font-bold tracking-tight sm:text-6xl text-gradient-title">Welcome Back!</h1>
             <p class="mt-6 text-lg leading-8 text-gray-600">Log in to your BookSync account to continue enjoying your eBooks and audiobooks in one interface.</p>
             <form class="mt-10 space-y-6" action="#" method="POST">
                 <div class="rounded-md shadow-sm -space-y-px">
@@ -41,7 +46,7 @@
                 </div>
             </form>
             <p class="mt-3 text-sm leading-5 text-gray-600">
-                New to BookSync? <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Create an account</a>.
+                New to BookSync? <a href="{{ url_for('registration_form') }}" class="font-medium text-indigo-600 hover:text-indigo-500">Create an account</a>.
             </p>
         </div>
     </div>
