changed book content width to 100%

--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -154,8 +154,8 @@
     img {
         opacity: 0;
     transition: opacity 0.5s ease-in-out;
-      max-width: 100dvw;
-      height: auto; 
+    max-width: 100%;
+    height: auto;
     }
 
 
@@ -195,8 +195,9 @@
     }
     #book_content {
       max-height: 100dvh;
-      max-width: 100dvw;
-      overflow-x:clip;
+      max-width: 100%;
+      overflow-x:hidden;
+      height: auto;
     }
     body {
       max-height: 100dvh;
