fixed horizontal scrolling

--- a/src/templates/reader_nav.html
+++ b/src/templates/reader_nav.html
@@ -6,6 +6,9 @@
   <title>{{ book_title }}</title>
 
   <style>
+    html{
+      overflow-x:hidden;
+    }
     .container {
       display: none; 
       position: fixed; 
@@ -21,7 +24,7 @@
       height: 100dvh;
     }
     .loader {
-      width: 100px; 
+      width: 100px;
       height: 100px;
       border-radius: 100%;
       background: linear-gradient(165deg, rgba(255,255,255,1) 0%, rgb(220, 220, 220) 40%, rgb(170, 170, 170) 98%, rgb(10, 10, 10) 100%);
@@ -379,8 +382,7 @@
         resetInactivityTimeout();
       });
       });
-      var navTrigger = document.getElementById('navTrigger');
-      navTrigger.parentNode.insertBefore(tempContainer.querySelector('#book_content'), navTrigger);
+
   
   </script>
 </body>
