--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,7 @@
     <div class="mx-auto max-w-2xl py-10 sm:py-48 lg:py-10">
         <div class="text-center">
             <h1 class="text-4xl font-bold tracking-tight text-gradient-title sm:text-6xl">Enhance Your Reading with Our E-Book Reader</h1>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Discover a tailored in-browser reading experience. Upload and manage your EPUB books, enjoy automatic bookmarking, and customize your reading with text scaling and dark mode.</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">Discover a tailored in-browser reading experience. Upload and manage your EPUB books, enjoy automatic bookmarking, and customise your reading with text scaling and dark mode.</p>
             <div class="mt-10 flex items-center justify-center gap-x-6">
                 <a href="{{ url_for('registration_form') }}" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign up now</a>
             </div>
@@ -22,7 +22,7 @@
 <div class="bg-indigo-600 py-10 sm:py-10">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:text-center">
-            <h2 class="text-base font-semibold leading-7 text-indigo-200">Optimized Reading Experience</h2>
+            <h2 class="text-base font-semibold leading-7 text-indigo-200">Optimised Reading Experience</h2>
             <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">Features Designed for Book Lovers</p>
             <p class="mt-6 text-lg leading-8 text-indigo-200">Our web app is the ideal place to store and read your eBooks. Experience the features designed to provide you the comfort and ease of reading digitally.</p>
         </div>
@@ -72,7 +72,7 @@
                         <dd class="mt-2 text-base leading-7 text-gray-600">You can upload and manage a comprehensive library of EPUB books without worrying about limits.</dd>
                     </div>
                     <div>
-                        <dt class="text-base font-semibold leading-7 text-gray-900">Can I customize my reading experience?</dt>
+                        <dt class="text-base font-semibold leading-7 text-gray-900">Can I customise my reading experience?</dt>
                         <dd class="mt-2 text-base leading-7 text-gray-600">Absolutely! You can adjust text sizes, switch to dark mode, and the content will dynamically reflow based on your viewport size.</dd>
                     </div>
                 </dl>
